--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeLight">
-        <activity android:name=".activities.MenuActivity">
+        <activity android:name=".activities.MenuActivity" android:configChanges="orientation" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.GameActivity" />
-        <activity android:name=".activities.SettingsActivity" />
+        <activity android:name=".activities.GameActivity" android:configChanges="orientation" android:screenOrientation="portrait" />
+        <activity android:name=".activities.SettingsActivity" android:configChanges="orientation" android:screenOrientation="portrait" />
     </application>
 
 </manifest>
